<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DayCustomization"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/TextDay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:paddingBottom="5dp"
        android:text="Day 1"
        android:textSize="20sp"
        android:textColor="@color/colorText"
        android:background="@drawable/border_bottom"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ex_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/TextDay"
        android:background="@color/colorBackground"/>

    <LinearLayout
        android:id="@+id/LinearButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100"
        android:layout_below="@id/ex_recycler">
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="19" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="27"
            android:text="@string/customization_buttonAdd" />
        <Button
            android:id="@+id/buttonRemove"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="27"
            android:text="@string/customization_buttonRemove" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="27"
            android:text="@string/customization_buttonSave" />

    </LinearLayout>


</RelativeLayout>